--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,14 +3,19 @@
   "name": "Josephmark Pokemon Developer Test",
   "icons": [
     {
-      "src": "/img/icons-192.png",
+      "src": "/icons-192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/img/icons-512.png",
+      "src": "/icons-512.png",
       "type": "image/png",
       "sizes": "512x512"
+    },
+    {
+      "src": "favicon.ico",
+      "sizes": "64x64 32x32 24x24 16x16",
+      "type": "image/x-icon"
     }
   ],
   "start_url": ".",
