--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "local-storage": "^2.0.0",
     "lodash.throttle": "^4.1.1",
     "react": "^16.13.1",
+    "react-device-detect": "^1.12.1",
     "react-dom": "^16.13.1",
     "react-infinite-scroll-component": "^5.0.4",
     "react-infinite-scroller": "^1.2.4",
